increase padding on button + fixing scroll-y visibility

--- a/source/css/styleParent.css
+++ b/source/css/styleParent.css
@@ -8,6 +8,7 @@
 ------------- */
 html {
   height: 100%;
+  overflow-y: scroll;
 }
 :root {
   --clr-gray-light: #b0bec5;
@@ -81,6 +82,9 @@ body {
   justify-content: center;
   align-content: space-between;
   padding: 1em;  
+}
+.wrapper-flex.privacy-policy {
+  padding-top: 0em;
 }
 
 /* CARDS CONTAINER 
@@ -602,6 +606,9 @@ body {
 @media(max-width: 950px) {
   .container.content.pub .body, .container.content.pub .pub-header {
     font-size: 0.7em;
+  }
+  .container.member p {
+    font-size: 0.7em;    
   }  
 }
 @media(max-width: 690px) {
@@ -709,6 +716,15 @@ body {
     padding: 0em 0em;
     margin: 0em 1em;
   } 
+  .container.member {
+    width: 40vw;    
+  }
+  .container.member h1 {
+    font-size: 4vw;
+  }  
+  .container.member p {
+    font-size: 2.4vw;
+  }
   .container.content.pub .body, .container.content.pub .pub-header{
     font-size: 1.9vw;
   }  
@@ -832,6 +848,9 @@ body {
     margin-right: 0.8em;
     height: 100%;
   }      
+  .container.member {
+    margin: 0.7em 0.7em;
+  }
   /* CARDS COMPONENT 
   ------------------ */
   .banner-img {
@@ -842,6 +861,9 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+  }
+  .container.member .banner-img {
+    height: 3.5em;
   }
   .banner-img.project {
     background-color: var(--clr-pink-light);
@@ -859,6 +881,12 @@ body {
     margin-bottom: 0.8rem;
     padding: 0rem;
     height: 0;
+  }
+  .profile-img.member {
+    visibility: visible;
+    height: auto;    
+    width: 30vw;
+    clip-path: circle(15vw at center);    
   }
   .name {
     font-size: 5vw;
